docs for event create
