# request_handlers/events/create.go
@@ -9,6 +9,14 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// Create ... Create event
+// @Summary Create event
+// @Description Create event
+// @Tags Events
+// @param event body requests.CreateEvent true "Event Data"
+// @Success 200 {object} responses.ResponseId
+// @Failure 404,400,500 {object} responses.MyError
+// @Router /events [post]
 func Create(c echo.Context) error {
 	e := new(requests.CreateEvent)
 	if err := c.Bind(e); err != nil {
